--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
     "__MyLocaleLanguage__": "English",
-    "__maintaner__": "http://github/yakyak",
+    "__maintaner__": "http://github.com/yakyak",
 
     "title": "YakYak - Hangouts Client",
     "description": "Desktop client for Google Hangouts",
