add Language in english, just in case ;)

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -84,7 +84,7 @@
             "cut": "Couper",
             "copy": "Coper",
             "select_all": "Tout sélectionner",
-            "language": "Langage"
+            "language": "Langage (Language)"
         },
         "view": {
             "title": "Présentation",
