typo in fr translation

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -82,7 +82,7 @@
             "redo": "Rétablir",
             "paste": "Coller",
             "cut": "Couper",
-            "copy": "Coper",
+            "copy": "Copier",
             "select_all": "Tout sélectionner",
             "language": "Langage (Language)"
         },
