add copy_{image,link} to translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -83,6 +83,8 @@
             "paste": "Paste",
             "cut": "Cut",
             "copy": "Copy",
+            "copy_link": "Copy Link",
+            "copy_image": "Copy Image",
             "select_all": "Select All",
             "language": "Language"
         },
