--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -83,6 +83,8 @@
             "paste": "Coller",
             "cut": "Couper",
             "copy": "Copier",
+            "copy_image": "Copier Image",
+            "copy_link": "Copier Link",
             "select_all": "Tout sélectionner",
             "language": "Langage (Language)"
         },
