adds language in english to better identify the menu item

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -87,7 +87,7 @@
             "copy_link": "Link kopieren",
             "copy_image": "Bild kopieren",
             "select_all": "Alles auswählen",
-            "language": "Sprache"
+            "language": "Sprache (Language)"
         },
         "view": {
             "title": "Ansicht",
