corrects (Language) in es and template

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -87,7 +87,7 @@
             "copy_link": "Copiar Enlace",
             "copy_image": "Copiar Imagen",
             "select_all": "Seleccionar todo",
-            "language": "Lenguaje"
+            "language": "Lenguaje (Language)"
         },
         "view": {
             "title": "Vista",
