missing copy image link

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -83,6 +83,7 @@
       "paste": "Wklej",
       "cut": "Wytnij",
       "copy": "Kopiuj",
+      "copy_image_link": "Kopiuj adres obrazu",
       "copy_link": "Kopiuj adres linku",
       "copy_image": "Kopiuj grafikę",
       "select_all": "Zaznacz wszystko",
