additional english translation for "language"

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -87,7 +87,7 @@
       "copy_link": "Kopiuj adres linku",
       "copy_image": "Kopiuj grafikę",
       "select_all": "Zaznacz wszystko",
-      "language": "Język"
+      "language": "Język (Language)"
     },
     "view": {
       "title": "Widok",
