corrects typo in de

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -159,7 +159,7 @@
                 "newer": "Eine neuere Version ist verfügbar, bitte aktualisieren Sie von %s zu %s",
                 "license": "Lizenz",
                 "authors": "Hauptautoren",
-                "contributors": "Mitwirkenden"
+                "contributors": "Mitwirkende"
             }
         },
         "window": {
