--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -38,7 +38,7 @@
         "delete_confirm": "Удалить диалог?",
         "leave": "Покинуть диалог",
         "leave_confirm": "Покинуть диалог?",
-        "search": "Поик людей",
+        "search": "Поиск людей",
         "new_message": "Новое сообщение"
     },
     "notification": {
@@ -117,18 +117,18 @@
                 "thumbnails": {
                     "show": "Показывать миниатюры",
                     "only": "Показывать только миниатюры",
-                    "animated": "Показывать анимированые миниатюры"
+                    "animated": "Показывать анимированные миниатюры"
                 }
             },
             "notification": {
                 "title": "Всплывающие уведомления",
                 "show": "Показывать уведомления",
                 "toggle": "Переключить уведомления",
-                "message": "Показывать текст сообщения в уведомлених",
-                "username": "Показывать имя отправителя в уведомлених",
+                "message": "Показывать текст сообщения в уведомлениях",
+                "username": "Показывать имя отправителя в уведомлениях",
                 "mute": "Отключить звук уведомлений",
-                "avatar": "Показывать аватар отправителя в уведомлених",
-                "icon": "Показывать YakYak иконку в уведомлених",
+                "avatar": "Показывать аватар отправителя в уведомлениях",
+                "icon": "Показывать YakYak иконку в уведомлениях",
                 "custom_sound": "Использовать мелодию YakYak для уведомлений"
             },
             "color_scheme": {
