--- a/src/locales/uk_UA.json
+++ b/src/locales/uk_UA.json
@@ -17,9 +17,9 @@
 
     "input": {
         "message": "Повідомлення",
-        "emoticons": "Показати смайлик",
+        "emoticons": "Показати смайлики",
         "image": "Прикріпити зображення",
-        "typing": "набирає повідомлення"
+        "typing": "Набирає повідомлення"
     },
     "conversation": {
         "title": {
