was missing english part in language string

--- a/src/locales/uk_UA.json
+++ b/src/locales/uk_UA.json
@@ -87,7 +87,7 @@
             "copy_link": "Копіювати посилання",
             "copy_image": "Копіювати зображення",
             "select_all": "Виділити все",
-            "language": "Мова"
+            "language": "Мова (Language)"
         },
         "view": {
             "title": "Вид",
