--- a/src/locales/uk_UA.json
+++ b/src/locales/uk_UA.json
@@ -160,6 +160,7 @@
                 "license": "Ліцензія",
                 "authors": "Головні автори",
                 "contributors": "Контрибутори"
+                "startup": "Відкрити при запуску"
             }
         },
         "window": {
