--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -50,7 +50,7 @@
       "one": "Ulubiony",
       "other": "Ulubione"
     },
-    "star_it": "Oznacz/Odznacz gwiazdką"
+    "star_it": "Zaznacz/Odznacz gwiazdką"
   },
   "actions": {
     "ok": "OK",
