Made some minor changes

--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -10,9 +10,9 @@
     "details": "தகவல்கள்",
 
     "connection" :{
-        "connecting": "தொடர்பில்",
-        "loading": "Loading தொடர்புகள்",
-        "not_connected": "தொடர்பில்லை (தொடர்பை சரிபார்க்கவும்)"
+        "connecting": "இணைப்பினை ஏற்படுத்துகிறது",
+        "loading": "தொடர்புகளை ஏற்றுகிறது",
+        "not_connected": "இணைப்பினை ஏற்படுத்தமுடியவில்லை (இணைப்பை சரிபார்க்கவும்)"
     },
 
     "input": {
@@ -50,7 +50,7 @@
             "one": "விருப்பம்",
             "other": "விருப்பங்கள்"
         },
-        "star_it": "நட்ச்சத்திரமிடு /நச்சத்திரத்தை நீக்கு"
+        "star_it": "நட்சத்திரமிடு /நட்சத்திரத்தை நீக்கு"
     },
     "actions": {
       "ok": "சரி",
