fully translated work
translation work is complete and some minor changes are included

--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -100,7 +100,7 @@
                 "show_tray": "சின்னத்தை காண்பி",
                 "show_window": "சாளரத்தை காண்பி",
                 "toggle_minimize": "தட்டை சிறிதாக்கு",
-                "start_minimize": "தட்டை சிறிதாக்க ஆரம்பி",
+                "start_minimize": "சிறிதாக்கிய நிலையில் தட்டை ஆரம்பி",
                 "close": "தட்டை மூடு"
             },
             "escape": {
