name of language in the language itself

--- a/src/locales/sv_SE.json
+++ b/src/locales/sv_SE.json
@@ -1,5 +1,5 @@
 {
-    "__MyLocaleLanguage__": "Swedish",
+    "__MyLocaleLanguage__": "Svenska",
     "__maintaner__": "http://github.com/sjoo90",
 
     "title": "YakYak - Hangouts Klient",
